--- a/imagens/exercicios1/index2.html
+++ b/imagens/exercicios1/index2.html
@@ -5,5 +5,5 @@
 <body>
     <img src="v1.png">
     <img src="imagens/v1 bolado.jpg">
-    <a href="https://i.pinimg.com/originals/89/6b/b2/896bb22036f5cb8d37cbc3eae07e4e10.jpg">visite esse site</a>
+    <a href="https://i.pinimg.com/originals/89/6b/b2/896bb22036f5cb8d37cbc3eae07e4e10.jpg"> <img src="imagens/gabriel.jpg"></a>
 </body>
