--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Meu site</title>
 </head>
 <link rel="stylesheet" type="text/css" href="style.css"> 
@@ -41,4 +44,125 @@
     </p>
 
 <img src="imagens/game-console-6603120_1280.jpg" alt="console game">
+
+<ol type="A">
+    <li>água</li>
+    <li>suco</li>
+    <li>refrigerante</li>
+    <li>café</li>
+    <li>chocolate quente</li>
+</ol>
+
+<ol type="1">
+    <li>placa de video</li>
+    <li>processador</li>
+    <li>cooler</li>
+    <li>placa mãe</li>
+    <li>SSD</li>
+</ol>
+
+<ol type="a">
+    <li>pizza</li>
+    <li>coxinha</li>
+    <li>enroladinho</li>
+    <li>pastel</li>
+    <li>joelho</li>
+</ol>
+
+<ol type="I">
+    <li>energético</li>
+    <li>chocolate</li>
+    <li>miojo</li>
+    <li>carne</li>
+    <li>alface</li>
+</ol>
+
+<ol type="i">
+    <li>bolo</li>
+    <li>chocolate</li>
+    <li>pudim</li>
+    <li>brigadeiro</li>
+    <li>quimdim</li>
+</ol>
+
+<ul type="circle">
+    <li>energético</li>
+    <li>chocolate</li>
+    <li>miojo</li>
+    <li>carne</li>
+    <li>alface</li>
+</ul>
+
+<ul type="square">
+    <li>Abi</li>
+    <li>Miss Circle</li>
+    <li>Bubble</li>
+    <li>Zip</li>
+    <li>Oliver</li>
+</ul>
+
+<ul type="none">
+    <li>Peacock</li>
+    <li>Miss Fortune</li>
+    <li>Elise</li>
+    <li>Squigly</li>
+    <li>Fukua</li>
+</ul>
+
+<ul>
+    <li>terror</li>
+    <ol>
+        <li>Five nights at Freddy's</li>
+            <ul type="square">
+            <li>Five nights at Freddy's 2</li>
+            <li>Five nights at Freddy's 1</li>
+            </ul>
+        <li>Stay out of the House</li>
+            <ul type="square">
+            <li>Nun massacrer</li>
+            <li>Night Shift</li>
+            </ul>
+    </ol><br>
+
+    <li>rpg</li>
+        <ol>
+        <li>Undertale</li>
+            <ul type="square">
+            <li>Deltarune</li>
+            <li>Undertale Yellow</li>
+            </ul>
+        <li>Pokémon</li>
+            <ul type="square">
+            <li>Pokémon fire red</li>
+            <li>Pokémon Emerald</li>
+            </ul>
+        </ol><br>
+
+    <li>FPS</li>
+        <ol>
+        <li>Call of Duty</li>
+            <ul type="square">
+            <li>Call of duty Modern Warfare</li>
+            <li>Call of duty Modern Warfare II</li>
+            </ul>
+        <li>Battlefield</li>
+            <ul type="square">
+            <li>Battlefield 1</li>
+            <li>Battlefield 4</li>
+            </ul>   
+        </ol>
+
+</ul>
+
+<dl>
+    <dt>HTML</dt>
+    <dd>Linguagem de marcação utilizada para criar o conteúdo de sites.</dd>
+
+    <dt>CSS</dt>
+    <dd>Linguagem de marcação para a especificação de estilos em sites.</dd>
+
+    <dt>JavaScript</dt>
+    <dd>Linguagem de programação para criar interatividades em sites.</dd>
+</dl>
+
 </body>
