--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Meu site</title>
+
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: aquamarine;
+            color: chartreuse;
+        }
+        
+        h1  {
+            color: green;
+        }
+    </style>
 </head>
-<link rel="stylesheet" type="text/css" href="style.css"> 
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
-    <h1>bem-vindo ao meu site</h1>
+
+
+    <h1 style="color:red;">bem-vindo ao meu site</h1>
     <p>Está é uma página simples feita com HTML</p>
     <p>melhor site de todos</p>
     <img src="saulgiff.gif" alt="descrição para a imagem">
@@ -165,4 +179,21 @@
     <dd>Linguagem de programação para criar interatividades em sites.</dd>
 </dl>
 
+<picture> 
+    <source media="(max-wigth: 750xpx)" srcset="v1.png" type="image/png">
+    <source media="(max-wigth: 1000px)" srcset="v1.jpg" type="image/jpg">
+    <img src="v1.png" alt="a imagem ta certo">
+</picture>
+
+<audio preload="metadata" controls autoplay loop>
+    <source src="Donkey Kong Country Music SNES - Bonus Room Blitz.mp3" type="audio/mp3">
+</audio>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/W0hBKRvVzV8?si=KQ30kCLs300lUW_j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<video width="600" poster="capsule_616x353.jpg" controls>
+    <source src="iFunnyVid1714156240473.mp4" type="video/webm">
+    <source src="iFunnyVid1714156240473.mp4" type="video/mp4">
+    <p>video não pode ser carregado</p>
+</video>
 </body>
